Prevent the right action-buttons from wrapping on the index page

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -79,3 +79,7 @@
 .pagination {
     margin: 0;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
